# AI-and-Open-Science

./: CITATION.cff  README.md  codemeta.json  dockerfile  rationale.md
nanosecurity/: pyproject.toml
nanosecurity/nanosecurity/: __init__.py
nanosecurity/tests/: __init__.py
textextraction/: README.md  pyproject.toml
textextraction/tests/: __init__.py
textextraction/textextraction/: __init__.py
