[tool.poetry]
name = "textextraction"
version = "0.1.0"
description = ""
authors = ["Alvaro Perez <a.pcaceres@alumnos.upm.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.2"
textblob = "^0.17.1"
wordcloud = "^1.8.2.2"
lxml = "^4.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
